# httprust

./: Cargo.toml  LICENSE  README.md  todo
examples/: test_client.rs
src/: async_stream.rs  compressed_read.rs  fakestream.rs  handler.rs  lib.rs  main.rs  meta_info.rs  threadpool.rs  tls.rs
src/handler/: mod.rs
src/handler/tests/: fakestream.rs
tests/: common.rs  contents.rs  errors.rs  get.rs  requests.rs  simple_get.rs
tests/sample_root/: index.html  large.txt
tests/sample_tls/: httprust-test-ca-cert.pem  httprust-test-ca-key.pem  httprust-test-ca.conf  httprust-test-cert.pem  httprust-test-key.pem  httprust-test-req.pem  httprust-test.p12
