[package]
name = "httprust"
version = "0.1.0"
authors = ["Klaas de Vries <klaasjacobdevries@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger= "0.3"
clap = "2.33"
hyper = "0.12"
futures = "0.1"
tokio = "0.1.20"
tokio-signal = "0.2"
path_abs = "0.4"
mime = "0.3"
flate2 = "1.0"
lazy_static = "1.3"

[dev-dependencies]
reqwest = "0.9"
sha2 = "0.8"
