[package]
name = "httprust"
version = "0.1.0"
authors = ["Klaas de Vries <klaasjacobdevries@gmail.com>"]
edition = "2018"

[dependencies]
log = "0.4"
pretty_env_logger= "0.3"
clap = "2.33"
hyper = "0.12"
hyper-rustls = "0.16"
tokio-rustls = "0.9"
rustls = "0.15"
futures = "0.1"
tokio = "0.1.20"
tokio-signal = "0.2"
path_abs = "0.4"
mime = "0.3"
mime_guess = "2.0.0-alpha.6"
flate2 = "1.0"

[dev-dependencies]
reqwest = "0.9"
sha2 = "0.8"
